[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uefn-tooling"
version = "0.1.0"
description = "Python scaffolding for external UEFN/Unreal Engine tooling"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
uefn-tool = "uefn_tooling.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
